@@ -1,3 +1,15 @@
+2021-05-08  Pedro Alves  <pedro@palves.net>
+
+	* linux-low.cc:
+	(linux_process_target::supports_disable_randomization): Remove
+	reference to HAVE_PERSONALITY.
+	* config.in, configure: Regenerate.
+
+2021-05-08  Pedro Alves  <pedro@palves.net>
+
+	* linux-low.cc: Don't include sys/personality.h or define
+	ADDR_NO_RANDOMIZE.
+
 2020-10-02  Simon Marchi  <simon.marchi@polymtl.ca>
 
 	* server.cc (handle_monitor_command): Handle "set
