@@ -1,3 +1,7 @@
+2021-05-08  Pedro Alves  <pedro@palves.net>
+
+	* common.m4 (personality test): Remove.
+
 2020-10-31  Simon Marchi  <simon.marchi@polymtl.ca>
 
 	* common-debug.cc (debug_prefixed_printf): New.
